#10088 closed bug (fixed)
pcnet broken under vbox
Reported by: | jessicah | Owned by: | korli |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta2 |
Component: | Drivers/Network/pcnet | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #10103, #13376 | |
Platform: | All |
Description
In hrev46220 pcnet no longer works under VirtualBox.
I now get two pcnet interfaces showing up; the first doesn't seem to try getting an IP at all, and the second one can only setup a link-local IP rather than acquire a DHCP lease.
Attachments (6)
Change History (20)
by , 11 years ago
Attachment: | listdev.txt added |
---|
by , 11 years ago
Attachment: | listimage-driver.txt added |
---|
by , 11 years ago
Attachment: | syslog.txt added |
---|
by , 11 years ago
Attachment: | ifconfig-1.txt added |
---|
by , 11 years ago
Attachment: | ifconfig-2.txt added |
---|
after getting link local IP (takes several minutes)
comment:1 by , 11 years ago
Owner: | set to |
---|---|
Status: | new → assigned |
comment:2 by , 11 years ago
The glue code seems correct, but the compatibility layer doesn't yet support the case when both drivers support the device. The one which probes with the higher priority should win at this place.
comment:3 by , 11 years ago
Blocking: | 10103 added |
---|
comment:5 by , 11 years ago
Now getting just the one device; but it's still unable to get an IP address via DHCP.
by , 11 years ago
Attachment: | syslog hrev46236.txt added |
---|
comment:7 by , 11 years ago
Still no joy. In ifconfig, it says it sends packets, but none received:
Receive: 0 packets, 0 errors, 0 bytes, 0 mcasts, 0 dropped Transmit: 6 packets, 0 errors, 1842 bytes, 0 mcasts, 0 dropped
comment:8 by , 11 years ago
I tested a bit and no interrupt is ever received when using PCnet FAST III on VirtualBox 4.3.0. To complete that, I tried booting FreeBSD 9.2 and it wasn't successful either with this network device whereas all was good mit PCnet-PCI II or Intel PRO 1000/MT.
To conclude, PCnet FAST III in VirtualBox doesn't work well at least with the pcn driver. Maybe it would be worth testing with another OS (ie Linux). I understand the le driver worked well with the PCnet FAST III device (in 16-bit mode). We could try to blacklist the device in the case of Virtualbox as a workaround, the fallback driver would then work good enough. Opinions?
comment:9 by , 11 years ago
Finally found a trick to get this card working on FreeBSD:
ifconfig pcn0 media 10baseT/UTP ifconfig pcn0 up dhclient pcn0
Now I tried on Haiku "ifconfig /dev/net/pcnet/0 media 10baseT" and only got a "General system error" back.
comment:10 by , 11 years ago
Also see https://www.virtualbox.org/ticket/861
Obsolete. For FreeBSD use the E1000 emulation.
comment:11 by , 11 years ago
Okay, thanks korli. E1000 it is then! We'll need some docs somewhere to point out that PCNET-III in VirtualBox shouldn't be used, unless you go the way of blacklisting it.
comment:12 by , 11 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Fixed in hrev46253. Still not being able to set the media with ifconfig is a bug.
comment:13 by , 6 years ago
Blocking: | 13376 added |
---|
comment:14 by , 5 years ago
Milestone: | R1 → R1/beta2 |
---|
Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone
before getting link local IP