freebsd_network: probes each driver and only attach the best probe.

* related bug #10088.